<resources>
    <string name="app_name">Sugar-Kidz</string>
    <string name="title_activity_pokeshop">PokeshopActivity</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Uitloggen">Klik hier om uit te loggen.</string>
    <string name="ok">OK</string>
    <string name="sugar_kidz">Sugar Kidz!</string>
    <string name="je_laatst_gemeten_bloedsuiker"> Je laatst gemeten bloedsuiker</string>
    <string name="_11_januari_12_00">11 januari, 12:00</string>
    <string name="mmol_liter">mmol/Liter</string>
    <string name="je_metingen_van_vandaag"> Je metingen van vandaag</string>
    <string name="_12_39">12:39</string>
    <string name="stripes" />
    <string name="_4_2">4.2</string>
    <string name="_15_01_18">15–01–18</string>
    <string name="gekocht">Al gekocht</string>
    <string name="koop">Koop mij!</string>
    <string name="vaker_meten">Vaker je bloedsuiker meten!</string>
    <string name="air" />
    <string name="time">00:00</string>
    <string name="hoogte">hoogte</string>
    <string name="all_measurements">Klik hier om al je metingen te bekijken   </string>
    <string name="date">0000–00–00</string>
    <string name="edit_button">edit button</string>
    <string name="pokemon">pokemon</string>
    <string name="background_for_pokemon">background for pokemon</string>
    <string name="ga_terug_naar_het_hoofdscherm">Ga terug naar het hoofdscherm</string>
    <string name="al_je_metingen">Al je metingen</string>
    <string name="laden">Laden...........</string>
    <string name="logout">Logout</string>
    <string name="klik_hier_om_al_je_metingen_te_bekijken">Klik hier om al je metingen te bekijken</string>
    <string name="vul_je_nieuwe_meting_in">Vul je nieuwe meting in</string>
    <string name="pokemon_shop">Pokemon Shop</string>
    <string name="koppel_een_apparaat">Koppel een apparaat</string>
    <string name="mijn_tuin">Mijn tuin</string>
    <string name="log_uit">Log uit</string>

    <string-array name="moments">
        <item>extra</item>
        <item>VO</item>
        <item>NO</item>
        <item>VL</item>
        <item>NL</item>
        <item>VA</item>
        <item>NA</item>
        <item>VS</item>
    </string-array>

</resources>
