<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="e.natasja.sugar_kidz.MainActivity">

    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/SugarKidz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="cursive"
        android:text="@string/sugar_kidz"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/air1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/je_laatst_gemeten_bloedsuiker"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lastMeasurementDate"
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/lastMeasurementHeight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:gravity="bottom"
            android:textColor="@color/purple"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/mmol_liter"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/air2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="bottom"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/vul_je_nieuwe_meting_in"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#000000"
            android:text="@string/stripes" />

        <TextView
            android:id="@+id/air5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textAlignment="textEnd"
                        android:textSize="18sp" />

                    <ImageView
                        android:contentDescription="@string/edit_button"
                        android:id="@+id/imageView"
                        android:onClick="timePicker"
                        android:layout_width="32dp"
                        android:layout_height="21dp"
                        app:srcCompat="@drawable/editor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/date"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textSize="18sp" />

                    <ImageView
                        android:contentDescription="@string/edit_button"
                        android:id="@+id/imageView3"
                        android:onClick="datePicker"
                        android:layout_width="34dp"
                        android:layout_height="21dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/editor" />
                </LinearLayout>

            </LinearLayout>

            <Spinner
                android:id="@+id/labelMeasurement"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/hightMeasurement"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hoogte"
                android:inputType="numberDecimal"
                android:labelFor="@+id/editText" />

            <Button
                android:id="@+id/addMeasurement"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="addMeasurement"
                android:text="@string/ok" />
        </LinearLayout>

        <TextView
            android:id="@+id/air4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#000000"
            android:text="@string/stripes" />

    </LinearLayout>

    <TextView
        android:id="@+id/air3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/je_metingen_van_vandaag"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/allMeasurements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToLogbook"
        android:text="@string/klik_hier_om_al_je_metingen_te_bekijken"
        android:textAlignment="textEnd"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/colorAccent"
        android:textStyle="italic" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
